# PanelFlow

./: .gitattributes  .gitignore  README.md  addMusic.py  animate_image.py  audio_generator.py  caption_generator.py  combineAudio.py  combineImageClip.py  combineVideo.py  comic_review.py  comic_shorts_review.py  common.py  content_creator.py  content_generator.py  content_map.py  content_processor.py  create_comic_panel_video.py  create_music.py  custom_env.py  databasecon.py  gemini_config.py  gemini_history_processor.py  gitlsf.conf  groq_free_tier_rate_limits.md  json_parser.py  main.py  media_transitions.py  merge_audio.py  prop_content.py  pyproject.toml  remove_sound_effect.py  render_text.py  requirements.txt  run_app.sh  scale_clip.py  sentence_split_system_prompt.md  server.py  text_splitter.py  video_clipper.py  (+3 more)
audio/: info.txt
databases/: info.txt
panelflow/: __init__.py  common.py  config.py  content_creator.py  content_generator.py  content_processor.py  databasecon.py  pipeline_base.py
panelflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
panelflow/categories/: base.py  comic.py  comic_review.py  comic_shorts_review.py  content_map.py  video_reviewer.py
panelflow/pipeline/: addMusic.py  audio_generator.py  combineImageClip.py  combineVideo.py  create_comic_panel_video.py  create_music.py  gemini_config.py  gemini_history_processor.py  media_transitions.py  merge_audio.py  music_creator.py  processor.py  remove_sound_effect.py  resize_with_aspect.py  scale_clip.py  text_splitter.py  video_generator.py
panelflow/prompt/: all_page_recap_prompt.md  comic_dialogue_matcher_prompt.md  comic_recap_user_prompt.md  comic_review_system_prompt.md  comic_title_desc_system_prompt.md  create_music_system_prompt.md  panel_animation_system_prompt.md
panelflow/publisher/: server.py
prompt/: json_validator_system_prompt.md
remotion-comic/: package-lock.json  package.json  tsconfig.json
remotion-comic/public/sfx/: generate_sfx.py
remotion-comic/src/: Root.tsx  animations.ts  transitions.ts  types.ts
remotion-comic/src/components/: AssembleIntro.tsx  KineticSubtitles.tsx  PanelBase.tsx  PanelSequences.tsx  PanelWithEvents.tsx  ProgressBar.tsx  ThreePartBuildUp.tsx
video/: info.txt
views/: index.html  media.html
