[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "panelflow"
version = "0.1.0"
description = "Comic panel video content creator"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "librosa",
    "pillow",
    "google-auth",
    "google-auth-oauthlib",
    "google-api-python-client",
    "ollama",
    "pyautogui",
    "requests-oauthlib",
    "cairosvg",
    "lxml",
    "pydub",
    "moviepy==1.0.3",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "websockets",
    "pytesseract",
    "triton",
    "langdetect",
    "pysubs2",
    "hmmlearn",
    "eyed3",
    "imbalanced-learn",
    "ffmpeg-python",
    "scenedetect",
    "pyannote.audio",
    "google-generativeai",
    "rarfile",
    "ffmpeg",
    "pymediainfo",
    "beautifulsoup4",
    "piexif",
    "jebin-lib @ git+https://github.com/jebin2/lib.git",
    "custom-logger @ git+https://github.com/jebin2/custom_logger.git",
    "gemiwrap @ git+https://github.com/jebin2/gemiwrap.git",
    "browser-manager @ git+https://github.com/jebin2/browser_manager.git",
    "chat-bot-ui-handler @ git+https://github.com/jebin2/chat_bot_ui_handler.git",
    "youtube-auto-pub @ git+https://github.com/jebin2/youtube_auto_pub.git",
    "psutil",
    "svgwrite",
    "spacy",
    "json-repair",
    "pydantic",
    "imagehash",
    "huggingface-hub",
    "cryptography",
    "sentence-transformers",
    "easyocr",
    "chardet",
]

[project.scripts]
panelflow = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
